--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- Main Card -->
 <main class="max-w-md mx-auto p-4">
 
-  <div class="bg-white/90 backdrop-blur rounded-3xl shadow-2xl p-6 space-y-4">
+  <div class="main-card p-6 space-y-4">
 
     <div class="bg-white rounded-full py-3 text-center font-semibold shadow-inner">
       3-Pulley Modified ATD
