--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 
     <!-- BUTTONS -->
     <div class="grid grid-cols-2 gap-3">
-      <button onclick="calculate()"
-        class="btn-3d w-full py-4 text-white font-bold text-lg transition"
-        Calculate
+      <button onclick="calculate()" class="btn-3d transition">
+  Calculate
       </button>
 
       <button onclick="resetForm()"
