--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
       </div>
 
       <div class="space-y-1">
-        <p class="text-xs text-slate-500 uppercase font-bold tracking-tight">X-Dimension (Pulley Center)</p>
+        <p class="text-sm text-slate-500 uppercase font-black tracking-tight">X-Dimension (Pulley Center)</p>
         <p class="text-2xl font-black text-slate-800">
           <span id="resX_mm">0</span> <span class="text-lg font-normal">mm</span>
-          <span class="text-sm text-slate-500 font-normal ml-2">
+          <span class="text-sm text-indigo-600 font-bold ml-2">
             ( <span id="resX_m">0</span> m )
           </span>
         </p>
       </div>
 
       <div class="space-y-1">
-        <p class="text-xs text-slate-500 uppercase font-bold tracking-tight">Y-Dimension (Counterweight)</p>
+        <p class="text-sm text-slate-500 uppercase font-black tracking-tight">Y-Dimension (Counterweight)</p>
         <p class="text-2xl font-black text-blue-700">
           <span id="resY_mm">0</span> <span class="text-lg font-normal">mm</span>
-          <span class="text-sm text-slate-500 font-normal ml-2">
+          <span class="text-sm text-indigo-600 font-bold ml-2">
             ( <span id="resY_m">0</span> m )
           </span>
         </p>
@@ -150,7 +150,7 @@
 
 <footer class="text-center text-xs text-slate-700 mt-6 pb-8 space-y-2">
   <div class="bg-slate-800/10 py-2 px-4 inline-block rounded-lg mb-2">
-    Formula: X = 1300 + [L × α × (35-T)] | Y = 2300 + 3[ΔX]
+    Formula: <span class="text-amber-700 font-bold">X</span> = 1300 + [<span class="text-amber-700 font-bold">L</span> × <span class="text-amber-700 font-bold">α</span> × (35-<span class="text-amber-700 font-bold">T</span>)] | <span class="text-amber-700 font-bold">Y</span> = 2300 + 3[Δ<span class="text-amber-700 font-bold">X</span>]
   </div>
   <p class="font-bold tracking-widest text-slate-800 uppercase">
     EASTERN RAILWAY – TRD / BASIRHAT
