--- a/index.html
+++ b/index.html
@@ -4,26 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>ATD Dimension Calculator</title>
+  
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1e293b">
   <link rel="icon" href="app-icon.png">
   <link rel="apple-touch-icon" href="app-icon.png">
+
+  <link rel="stylesheet" href="style.css">
+  
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { background: linear-gradient(180deg, #0f172a, #e5e7eb); -webkit-user-select: none; user-select: none; min-height: 100vh; }
-    input { -webkit-user-select: text; user-select: text; }
-    .main-card { background: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); border-radius: 1.5rem; box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1); }
-    .glass-input { background: rgba(241, 245, 249, 1); border: 2px solid #e2e8f0; border-radius: 1rem; transition: all 0.2s; }
-    .glass-input:focus { border-color: #3b82f6; background: white; }
-    .btn-3d { background: #2563eb; color: white; padding: 1rem; border-radius: 1rem; font-weight: bold; font-size: 1.125rem; box-shadow: 0 4px 0 #1d4ed8; transition: all 0.1s; }
-    .btn-3d:active { transform: translateY(2px); box-shadow: 0 2px 0 #1d4ed8; }
-    .result-glass { background: rgba(219, 234, 254, 0.5); border-radius: 1rem; border: 1px solid #bfdbfe; }
-    
-    /* Visual Indicator Styles */
-    .gauge-container { width: 40px; height: 150px; background: #cbd5e1; border-radius: 8px; position: relative; overflow: hidden; border: 2px solid #94a3b8; }
-    .gauge-weight { width: 100%; height: 20px; background: #2563eb; position: absolute; left: 0; transition: bottom 0.5s ease-in-out; border-top: 2px solid #60a5fa; border-bottom: 2px solid #1e40af; }
-    .gauge-label { position: absolute; left: 45px; font-size: 10px; color: #64748b; font-weight: bold; }
-  </style>
 </head>
 
 <body class="antialiased">
@@ -74,7 +63,7 @@
           </div>
 
           <div>
-            <p class="text-[10px] text-slate-500 uppercase font-black tracking-tight">X-Dimension</p>
+            <p class="text-[10px] text-slate-500 uppercase font-black tracking-tight">X-Dimension (Pulley Center)</p>
             <p class="text-xl font-black text-slate-800">
               <span id="resX_mm">0</span> <span class="text-sm font-normal">mm</span>
               <p class="text-xs text-indigo-600 font-bold">(<span id="resX_m">0</span> m)</p>
@@ -82,7 +71,7 @@
           </div>
 
           <div>
-            <p class="text-[10px] text-slate-500 uppercase font-black tracking-tight">Y-Dimension</p>
+            <p class="text-[10px] text-slate-500 uppercase font-black tracking-tight">Y-Dimension (Counterweight)</p>
             <p class="text-xl font-black text-blue-700">
               <span id="resY_mm">0</span> <span class="text-sm font-normal">mm</span>
               <p class="text-xs text-indigo-600 font-bold">(<span id="resY_m">0</span> m)</p>
@@ -96,8 +85,6 @@
     </div>
   </div>
 </main>
-
-
 
 <footer class="text-center text-xs text-slate-700 mt-6 pb-8 space-y-2">
   <div class="bg-slate-800/10 py-2 px-4 inline-block rounded-lg mb-2">
@@ -116,22 +103,20 @@ function calculate() {
   if (isNaN(L) || isNaN(T)) { alert("Enter valid values"); return; }
 
   const T_ref = 35;
-  const alpha = 0.000017;
+  const alpha = 0.0000171; // Updated to match your footer's 1.71 coeff
   const expansionFactor = L * alpha * (T_ref - T) * 1000;
   const X = 1300 + expansionFactor;
   const Y = 2300 + (3 * expansionFactor);
 
-  // Update Text
   document.getElementById("deltaT").textContent = (T - T_ref).toFixed(1);
   document.getElementById("resX_mm").textContent = round(X, 2).toLocaleString();
   document.getElementById("resY_mm").textContent = round(Y, 2).toLocaleString();
   document.getElementById("resX_m").textContent = round(X / 1000, 3);
   document.getElementById("resY_m").textContent = round(Y / 1000, 3);
 
-  // Update Visual Gauge Logic
-  // At 35C, Y=2300 (Middle). Let's say range is +/- 500mm for visualization
+  // Gauge animation logic
   let percentage = 50 + ((Y - 2300) / 10); 
-  percentage = Math.max(5, Math.min(95, percentage)); // Keep within bounds
+  percentage = Math.max(5, Math.min(95, percentage)); 
   document.getElementById("gaugeWeight").style.bottom = percentage + "%";
 
   document.getElementById("results").classList.remove("hidden");
